--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="https://media-hosting.imagekit.io//2bb6531b5e914660/IMG_20250319_094921.jpg?Expires=1836965988&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=AxdTN3IkNioZGhl6sjRkmxq~B632y4bj63~NIfnG57Y8n4iL8jgGA-Uq2e0AB3d84os-YMPq9gwJxsL0-fFj3~iw1F1PfezHGdYOqN1SPI3M2vlQ~4eUdx4tqeS26yBWaiUu1s4UHvUlAtzfCIcbDo0YJdOYx1YQvZ3I5-mDfvdiCtNohw3FmUUOatax-qc-2gEd~R8ffUAtBeuKeU1lR13WyofpdMyDRCa1ANsppYvmFAKHyL~D5LjLWxGjJsZwqSc0UWbgc6q6S9o~klHlVTg48CXw58J6IFLr2O0kHtl0xL3cSA3XX81gnLtDPDX7C5pjGJn1AHU~-XtwAvEzMg__" alt="Your Profile Picture" class="profile-picture">
-            <h1>Yuvarani M</h1>
+            <img src="yuvarani.jpeg" alt="Your Profile Picture" class="profile-picture">
+            <h1>Yuvarani M</h1
             <p>Am Bsc Student</p>
         </div>
     </header>
