--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ As a student, I'm focused on achieving academic excellence and developing skills
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="resume.html" target="_blank" class="download-button">Download CV</a>
+            <a href="yuvarani.html" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
